--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
     "uuid": "^13.0.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "jsqr": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
