--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "uuid": "^13.0.0",
     "recharts": "^3.7.0",
     "jsqr": "^1.4.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1"
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
