--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.4",
     "uuid": "^13.0.0",
     "recharts": "^3.7.0",
-    "jsqr": "^1.4.0",
+    "html5-qrcode": "^2.3.8",
+    "xlsx": "^0.18.5",
     "html2canvas": "^1.4.1"
   },
   "devDependencies": {
