--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
     "react": "^19.2.4",
-    "uuid": "^13.0.0",
-    "recharts": "^3.7.0",
-    "html5-qrcode": "^2.3.8",
-    "xlsx": "^0.18.5",
-    "html2canvas": "^1.4.1"
+    "react-dom": "^19.2.4",
+    "uuid": "11.0.0",
+    "recharts": "2.12.7",
+    "html5-qrcode": "2.3.8",
+    "xlsx": "0.18.5",
+    "html2canvas": "1.4.1",
+    "qrcode": "1.5.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
